tests/fixtures/pass/vec_capacity_overflow.sc
use alloc.vec.Vec

let main(): i32 = {
  let values: Vec(i32) = Vec(i32).with_capacity(18446744073709551615)
  values.len()
  0
}
