tests/fixtures/fail/for_refutable_pattern.sc
let main(): i32 = {
  for Some(value) in values {
    value
  }
  0
}
